CHANGES:
1/17/2014:
- MicrosoftWorks: add a spreadsheet parser(main content + some graphics)

1/10/2014:
- rename all the parser files to recognize more easily the parser...

1/6/2014:
- BeagleWorks/WordPerfect Work: add code to retrieve chart, very basic,
  ie. retrieve only the data ranges:-~
- add a class MWAWChart to store and create some basic charts

12/26/2013:
- BeagleWorks/WordPerfect Work: add a spreadsheet parser

12/22/2013:
- add a listener MWAWSpreadsheetListener to create spreadsheet document

12/18/2013:
- create simple graphic shapes directly (rectangles, lines, cicles, polygon),
  ie. no longer create an embedded object to export a single graphic shapes.
  Note: the path shapes and the shapes' group continue to create an embedded
  object 

11/02/2013:
- update libmwaw to depend on librevenge

============== end of version 0.2. =================

12/02/2013:
- AppleWorks/ClarisWorks parser: recognize more bitmap

-------- version 2.1 (start)  -------------

10/19/2013:
- switch to version 0.2: simplify the interface to retrieve graphic created
  by libmwaw, add possibility to manage password in some near futur, try
  to make all enum more meaningfy.

10/17/2013:
- Microsoft Word parser: try to improve the parsings of the character and
  paragraph properties. This must correct most of the problems concerning the 
  paragraph properties but only some concerning the character properties.

10/10/2013:
- AppleWorks/ClarisWorks parser: begin to parse the spreadsheet and
  database structure + begin to reconstruct a spreadsheet present in a
  word text document in a table.
  Create a small tool mwaw2csv to retrieve the main content of a spreadsheet
  /database AppleWorks/ClarisWorks.

10/07/2013:
- AppleWorks/ClarisWorks parser: retrieve the patterns, the wallpaper;
  send the reconstructed bitmaps with the good size; retrieve the accross
  pages in a drawing document; try to reconstruct a single picture for a
  group of shape, ...

09/27/2013: