@@ -95,13 +95,13 @@ public:
   enum Type {
     MWAW_T_UNKNOWN=0 /**< Unrecognised file type*/,
     MWAW_T_ACTA /**Acta (v2 and Classic v1)*/,
-    MWAW_T_BEAGLEWORKS /**BeagleWorks (v1.0)/WordPerfect Works (v1.2). Export spreadsheet and text files.*/,
+    MWAW_T_BEAGLEWORKS /**BeagleWorks (v1.0)/WordPerfect Works (v1.2): export spreadsheet and text files.*/,
     MWAW_T_CLARISWORKS /**ClarisWorks/AppleWorks: all versions, open text files + draw/paint files (exported as text) + spreadsheet/database files (exported as text in a big table, experimental)*/,
     MWAW_T_DOCMAKER /** DocMaker (v4)*/,
     MWAW_T_EDOC /** eDOC (v2)*/,
     MWAW_T_FRAMEMAKER /** FrameMaker: TODO*/,
     MWAW_T_FULLWRITE /** FullWrite Professional: basic*/,
-    MWAW_T_GREATWORKS /** GreatWorks (v1-v2): text and drawing (as text) document*/,
+    MWAW_T_GREATWORKS /** GreatWorks (v1-v2): export text, drawing(as text) and spreadsheet document.*/,
     MWAW_T_HANMACWORDJ /** HanMac Word-J (v2.0.4) */,
     MWAW_T_HANMACWORDK /** HanMac Word-K (v2.0.5-2.0.6) */,
     MWAW_T_LIGHTWAYTEXT /** LightWayText (only v4 Mac format) */,
@@ -113,7 +113,7 @@ public:
     MWAW_T_MINDWRITE /** MindWrite */,
     MWAW_T_MORE /** More (v2-3): retrieve the organization part but not the slide/tree parts*/,
     MWAW_T_MICROSOFTWORD /** Microsoft Word  (v1-v5)*/,
-    MWAW_T_MICROSOFTWORKS /** Microsoft Works Mac*/,
+    MWAW_T_MICROSOFTWORKS /** Microsoft Works Mac: export spreadsheet and text files.*/,
     MWAW_T_MACWRITE /** MacWrite */,
     MWAW_T_MACWRITEPRO /** MacWrite II/Pro*/,
     MWAW_T_NISUSWRITER /** Nisus Writer (v3.4-v6.5)*/,
