@@ -1,4 +1,7 @@
 CHANGES:
+1/22/2014:
+- GreatWorks: add a spreadsheet parser(main content + some graphics)
+
 1/17/2014:
 - MicrosoftWorks: add a spreadsheet parser(main content + some graphics)
 
